--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +22,15 @@
   <!-- 3. Display the application -->
   <body>
     <base href="/">
-    <my-app></my-app>
+    <my-app>
+      <div class="container container-table" style="height:100%;">
+        <div class="row vertical-center-row">
+          <div class="text-center col-md-4 col-md-offset-4">
+      <i class="fa fa-spinner fa-spin" style="font-size:30px;color:red;">
+        </i>
+        </div>
+      </div>
+      </div>
+        </my-app>
   </body>
 </html>
